--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,6 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+      - run:
+          name: Run AAR Generation
+          commmand: ./gradlew assembleRelease
