--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,4 @@ jobs:
           path: app/build/test-results
       - run:
           name: Run AAR Generation
-          commmand: ./gradlew assembleRelease
+          command: ./gradlew assembleRelease
